Bug 73546 - faulty value of attribute value in <wp:anchor> tag
Summary: faulty value of attribute value in <wp:anchor> tag
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: All All
: medium normal
Assignee: Umesh Kadam
URL: https://ebookwriters.co.uk/
Whiteboard: target:4.3.0 target:7.6.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-13 10:14 UTC by Umesh Kadam
Modified: 2025-10-23 14:09 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
file contains text frames in header/footer section (422.93 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-01-17 13:10 UTC, Umesh Kadam
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Umesh Kadam 2014-01-13 10:14:44 UTC
<wp:anchor> tag attribute distL & distR has -ve value (distL="-635" distR="-635" )

Issue Simulation:
-------------------
1) Open the attached file "3-A-SSI-Education-Program-2013.docx" in LibreOffice
2) Click File -> Save As (Microsoft Word 2007/2010 (.docx))
3) Try opening the saved file in MS Office 2010.

Expected behavior:
---------------------
File should be opened without any error messages

Observed behavior:
--------------------
While opening the file in MS Office an error is displayed saying "Unspecified Error"
Comment 1 Umesh Kadam 2014-01-17 13:10:09 UTC
Created attachment 92282 [details]
file contains text frames in header/footer section
Comment 2 Jorendc 2014-01-17 16:48:30 UTC
Reproducible, tested using Mac OSX 10.9 with LibreOffice Version: 4.3.0.0.alpha0+ Build ID: 99159a618fd1ea90a2bc8a72621c88a4cf26e6f5
TinderBox: MacOSX-x86@49-TDF, Branch:master, Time: 2014-01-17_06:36:23

And Word for Mac 2011.

Kind regards,
Joren
Comment 3 Commit Notification 2014-01-23 10:06:19 UTC
umeshkadam committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=896714db527f39497aedee8946964e5acd73778c

fdo#73546 : faulty value of attribute value in <wp:anchor> tag



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-03-15 12:40:16 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a777dab7544bd11c26ae26c40cce49ab976dab2d

tdf#154129 tdf#73546 writerfilter framePr: fix/deduplicate w:v/hSpace

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Marks4surenet 2025-02-12 11:32:26 UTC
Marks4sure.net – Your Ultimate Exam Prep Partner
Looking for a reliable way to ace your certification exams? Marks4sure.net has got you covered! With expertly crafted practice questions and up-to-date exam dumps, you can boost your confidence and pass on your first attempt. Stop stressing—start practicing with Marks4sure.net and achieve your certification dreams!
70% Discount for Your First Exam!>>>>>>>>>>>>>>>>>>>>>> https://www.marks4sure.net/MB-820-exam.html
Comment 6 Olivia Hill 2025-10-23 14:09:04 UTC
As a student learning web development, I recently encountered the faulty value of attribute value in <wp:anchor> tag error—it was confusing at first! While fixing it, I took a break and found https://ebookwriters.co.uk/proofreading-service helpful for improving my written project explanations and refining my technical documentation.