fdo#73546 : faulty value of attribute value in <wp:anchor> tag

Issue :
    - The margins for distL & distR were getting exported as a negative
      value viz ( distL="-635" distR="-635" ).
    - While setting the default frame properties the values for distL
      & distR were getting defaulted to -1, this value was further
      considered while exporting for calculations hence the value
      -635 used to appear.

   Implementation :
    - according to Ecma 20.4.3.6 the values of distL & distR should
      be positive.
    - Added a condition to check the negativity of the value while
      setting it to default.
    - observed that horizontal orientation values were being populated
      to distT & distB( top & bottom margin respectively) and
      vertical orientation values were being populated to distL & distR
      (Left and right margin respectively). The values should have been
      vice versa. Corrected the same.

Change-Id: I056e5845b64cd755429297899eeb972f6009efec